<?xml version="1.0"?>
<package format="2">
  <name>clober_ff_client_ros1</name>
  <version>1.0.0</version>
  <description>Free fleet client examples of using clober in ROS 1</description>
  <maintainer email="ros@clobot.co.kr">clobot-git</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ff_rviz_plugins_ros1</exec_depend>
  <exec_depend>free_fleet_client_ros1</exec_depend>

  <exec_depend>clober_simulation</exec_depend>
  <exec_depend>clober_description</exec_depend>
  <exec_depend>clober_navigation</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf2</exec_depend>
</package>
